[gd_scene load_steps=18 format=3 uid="uid://bivcxwfk75idb"]

[ext_resource type="FontFile" uid="uid://bq1l0b67iwc20" path="res://Font/ProtestStrike-Regular.ttf" id="1_4inwh"]
[ext_resource type="Script" path="res://Scenes/Settings.gd" id="1_w314a"]
[ext_resource type="Script" path="res://Scripts/Menus/BackButton.gd" id="2_lan22"]
[ext_resource type="PackedScene" path="res://3d/prefabs/SM_Ground.tscn" id="3_2i48y"]
[ext_resource type="PackedScene" uid="uid://dvbgue5ks3uno" path="res://Lighting/NormalLighting.tscn" id="4_nndf6"]
[ext_resource type="PackedScene" uid="uid://dgl1q1hbqt5cc" path="res://3d/prefabs/SM_Wall.tscn" id="5_781pv"]
[ext_resource type="PackedScene" uid="uid://c5mopr7v88li7" path="res://3d/prefabs/SM_ceiling_tile.tscn" id="6_x57xo"]
[ext_resource type="PackedScene" uid="uid://hf8ven2syv21" path="res://Scenes/LightSystem/BaseLight.tscn" id="7_jn637"]
[ext_resource type="PackedScene" uid="uid://c632p5c7pbinm" path="res://3d/prefabs/SM_desk_wood_green.tscn" id="8_qba0f"]
[ext_resource type="PackedScene" uid="uid://cqpn0qclvo5gl" path="res://3d/prefabs/SM_lamp.tscn" id="9_d8y6l"]
[ext_resource type="PackedScene" uid="uid://dgr5nicxcu3d5" path="res://3d/prefabs/SM_Door.tscn" id="10_rjkwg"]
[ext_resource type="PackedScene" uid="uid://bhpil5cd6b3ee" path="res://3d/prefabs/SM_spikes.tscn" id="11_kxs63"]
[ext_resource type="PackedScene" uid="uid://lik474u4akqy" path="res://3d/prefabs/SM_bathroom_lights.tscn" id="12_h7pta"]

[sub_resource type="Theme" id="Theme_udhoj"]
default_font = ExtResource("1_4inwh")
default_font_size = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pepnj"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spdv8"]
bg_color = Color(0.027451, 0, 0.0784314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Theme" id="Theme_67rjk"]
default_font = ExtResource("1_4inwh")
default_font_size = 80
Button/styles/hover = SubResource("StyleBoxFlat_pepnj")
Button/styles/normal = SubResource("StyleBoxFlat_spdv8")

[node name="Settings" type="Node3D"]
script = ExtResource("1_w314a")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.5
offset_top = -514.0
offset_right = 368.5
offset_bottom = -303.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_udhoj")
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
custom_minimum_size = Vector2(200, 800)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -364.0
offset_right = 429.0
offset_bottom = 436.0
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 2
metadata/_edit_group_ = true

[node name="BackButton" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_67rjk")
text = "Back
"
script = ExtResource("2_lan22")

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.5
offset_top = -300.5
offset_right = 284.5
offset_bottom = 300.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Master" type="Label" parent="CanvasLayer/Panel/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_udhoj")
theme_override_font_sizes/font_size = 70
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master2" type="HSlider" parent="CanvasLayer/Panel/VBoxContainer2"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Music" type="Label" parent="CanvasLayer/Panel/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_udhoj")
theme_override_font_sizes/font_size = 70
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music2" type="HSlider" parent="CanvasLayer/Panel/VBoxContainer2"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="SFX" type="Label" parent="CanvasLayer/Panel/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_udhoj")
theme_override_font_sizes/font_size = 70
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX2" type="HSlider" parent="CanvasLayer/Panel/VBoxContainer2"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="SM_Ground" parent="." instance=ExtResource("3_2i48y")]
transform = Transform3D(40, 0, 0, 0, 29.738, 0, 0, 0, 29.738, 8.33564, -4.43131e-07, 10.1348)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.310601, -0.0369134, 0.949823, -0.032913, 0.998229, 0.0495574, -0.94997, -0.0466541, 0.308836, 0, 2.18047, -1.80116)

[node name="NormalLighting" parent="." instance=ExtResource("4_nndf6")]

[node name="BasePaintedWall" parent="." instance=ExtResource("5_781pv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.27639, -4.43131e-07, -1.26297)

[node name="BasePaintedWall2" parent="." instance=ExtResource("5_781pv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.72361, -4.43131e-07, -1.26297)

[node name="BasePaintedWall5" parent="." instance=ExtResource("5_781pv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.27639, -4.43131e-07, 6.73703)

[node name="BasePaintedWall6" parent="." instance=ExtResource("5_781pv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.72361, -4.43131e-07, 6.73703)

[node name="BasePaintedWall7" parent="." instance=ExtResource("5_781pv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.27639, -4.43131e-07, 14.737)

[node name="BasePaintedWall8" parent="." instance=ExtResource("5_781pv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.72361, -4.43131e-07, 14.737)

[node name="BasePaintedWall3" parent="." instance=ExtResource("5_781pv")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0.27639, -4.43131e-07, 19.1753)

[node name="BasePaintedWall4" parent="." instance=ExtResource("5_781pv")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0.27639, -4.43131e-07, -4.82474)

[node name="ceilingTile" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, -4.18277)

[node name="ceilingTile2" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, -2.18277)

[node name="ceilingTile3" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, -0.182774)

[node name="ceilingTile4" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, 1.81723)

[node name="ceilingTile5" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, 1.81723)

[node name="ceilingTile6" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, 1.81723)

[node name="ceilingTile13" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, 3.81723)

[node name="ceilingTile14" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, 3.81723)

[node name="ceilingTile15" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, 3.81723)

[node name="ceilingTile16" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, 5.81723)

[node name="ceilingTile17" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, 5.81723)

[node name="ceilingTile18" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, 5.81723)

[node name="ceilingTile19" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, 7.81723)

[node name="ceilingTile20" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, 7.81723)

[node name="ceilingTile21" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, 7.81723)

[node name="ceilingTile22" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, 9.81723)

[node name="ceilingTile23" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, 9.81723)

[node name="ceilingTile24" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, 9.81723)

[node name="ceilingTile25" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, 11.8172)

[node name="ceilingTile26" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, 11.8172)

[node name="ceilingTile27" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, 11.8172)

[node name="ceilingTile28" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, 13.8172)

[node name="ceilingTile29" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, 13.8172)

[node name="ceilingTile30" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, 13.8172)

[node name="ceilingTile31" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, 15.8172)

[node name="ceilingTile32" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, 15.8172)

[node name="ceilingTile33" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, 15.8172)

[node name="ceilingTile34" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 2.36586, 3.81314, 17.8172)

[node name="ceilingTile35" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, 17.8172)

[node name="ceilingTile36" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, 17.8172)

[node name="ceilingTile7" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, -0.182774)

[node name="ceilingTile8" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, -2.18277)

[node name="ceilingTile9" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -1.63414, 3.81314, -4.18277)

[node name="ceilingTile10" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, -4.18277)

[node name="ceilingTile11" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, -2.18277)

[node name="ceilingTile12" parent="." instance=ExtResource("6_x57xo")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.365859, 3.81314, -0.182774)

[node name="Light" parent="." instance=ExtResource("7_jn637")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.000324726, 3.86598, -2.07434)
light_color = Color(1, 0.756863, 0.215686, 1)
spot_range = 1.0
MaxPowerOfLight = 1
FlickeringLoop = 2.0

[node name="Light2" parent="." instance=ExtResource("7_jn637")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.00032, 3.86598, -0.0743387)
light_color = Color(1, 0.756863, 0.215686, 1)
MaxPowerOfLight = 1
FlickeringLoop = 2.0
Flickering = true

[node name="Light3" parent="." instance=ExtResource("7_jn637")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1.99968, 3.86598, -0.0743387)
light_color = Color(1, 0.756863, 0.215686, 1)
MaxPowerOfLight = 1
FlickeringLoop = 2.0
Flickering = true

[node name="deskWoodGreen" parent="." instance=ExtResource("8_qba0f")]
transform = Transform3D(1.09784, 0, -0.560994, 0, 1.23287, 0, 0.560994, 0, 1.09784, 1.1662, -0.214955, -3.20793)

[node name="lamp" parent="." instance=ExtResource("9_d8y6l")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.61696, 1.03838, -3.16043)

[node name="SmDoor" parent="." instance=ExtResource("10_rjkwg")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.71182, 0.22387, -1.86766)

[node name="spikes" parent="." instance=ExtResource("11_kxs63")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.74493, -0.490912, 0.0100789)

[node name="spikes2" parent="." instance=ExtResource("11_kxs63")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.206109, -0.490912, 3.42825)

[node name="spikes3" parent="." instance=ExtResource("11_kxs63")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.0075, -0.490912, 0.875542)

[node name="bathroomLights" parent="." instance=ExtResource("12_h7pta")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.161579, -4.43131e-07, 9.11127)

[connection signal="button_up" from="CanvasLayer/Panel/VBoxContainer/BackButton" to="CanvasLayer/Panel/VBoxContainer/BackButton" method="_on_button_up"]
[connection signal="value_changed" from="CanvasLayer/Panel/VBoxContainer2/Master2" to="." method="_on_master_2_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/VBoxContainer2/Music2" to="." method="_on_music_2_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Panel/VBoxContainer2/SFX2" to="." method="_on_sfx_2_value_changed"]
